fixing the wrap alignment of the skills page

--- a/style.css
+++ b/style.css
@@ -110,18 +110,23 @@ html {
     text-decoration: none;
     color: #ffffff;
   }
-
-  .section, .skills-section {
-    padding: 150px 24px;
-    margin: 0 auto;
-  }
   
   .section {
     max-width: 760px;
+    padding: 150px 24px;
+    margin: 0 auto;
   }
 
   .skills-section {
-    max-width: 200px;
+    padding: 150px 24px;
+    margin: 0 auto;
+    display: flex;
+    align-items: baseline;
+    flex-direction:row;
+    max-width: 800px;
+    flex-wrap:wrap;
+    gap: 20px;
+   
   }
   
   .section h2 {
@@ -139,13 +144,15 @@ html {
   }
   
   .skills {
-    padding: 20px 0px 20px 0px;
+    padding: 32px 0px 32px 0px;
     margin-bottom: 32px;
     border-radius: 5px;
     background-color: #4b5563;
     display: flex;
     align-items: center;
     flex-direction:column;
+    position: relative;
+    max-width: 100%;
   }
   
   .skills-logo { 
@@ -154,6 +161,7 @@ html {
   
   
   .skills-description {
+    color: #ffffff;
     margin-bottom: 0;
   }
   
